--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,16 +26,17 @@
 
     </android.support.v7.widget.CardView>
 
-    <android.spport.v7.widget.CardView
+   <!-- <android.spport.v7.widget.CardView
     android:id="@+id/cardLista"
     android:layout_below="@id/cardAutocomplete"
     android:layout_marginTop="40dp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content">-->
 
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recLista"
+        android:layout_below="@id/cardAutocomplete"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -44,6 +45,6 @@
         android:layout_marginRight="10dp"
         android:scrollbars="vertical"
         />
-</android.spport.v7.widget.CardView>
+<!--</android.spport.v7.widget.CardView>-->
 
 </RelativeLayout>
