--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -6,9 +6,10 @@
     android:padding="10dp">
 
     <TextView
+        android:id="@+id/txtPlace"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="PLACE:"/>
+        />
 
 </LinearLayout>
