--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -5,11 +5,18 @@
     android:gravity="center_vertical"
     android:padding="10dp">
 
+<android.support.v7.widget.CardView
+    android:id="@+id/cardLista"
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent">
     <TextView
         android:id="@+id/txtPlace"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:gravity="center_vertical|center_horizontal"
+
+
         />
+</android.support.v7.widget.CardView>
 
 </LinearLayout>
