--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
 
     </android.support.v7.widget.CardView>
 
-   <!-- <android.spport.v7.widget.CardView
+    <!--<android.spport.v7.widget.CardView
     android:id="@+id/cardLista"
     android:layout_below="@id/cardAutocomplete"
     android:layout_marginTop="40dp"
@@ -38,7 +38,7 @@
         android:id="@+id/recLista"
         android:layout_below="@id/cardAutocomplete"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
