--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,22 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
-    android:padding="10dp">
+    android:padding="10dp"
+    android:background="#fff">
 
-<android.support.v7.widget.CardView
-    android:id="@+id/cardLista"
-    android:layout_height="wrap_content"
-    android:layout_width="match_parent">
+
     <TextView
         android:id="@+id/txtPlace"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="32dp"
         android:gravity="center_vertical|center_horizontal"
 
 
         />
-</android.support.v7.widget.CardView>
+
 
 </LinearLayout>
