--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,12 +26,12 @@
 
     </android.support.v7.widget.CardView>
 
-    <!--<android.spport.v7.widget.CardView
+    <android.support.v7.widget.CardView
     android:id="@+id/cardLista"
     android:layout_below="@id/cardAutocomplete"
-    android:layout_marginTop="40dp"
+    android:layout_marginTop="10dp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">-->
+    android:layout_height="wrap_content">
 
 
     <android.support.v7.widget.RecyclerView
@@ -40,11 +40,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
         android:scrollbars="vertical"
         />
-<!--</android.spport.v7.widget.CardView>-->
+</android.support.v7.widget.CardView>
 
 </RelativeLayout>
